Tests/ShouldSucceed/try17.adl
CONTEXT Test

PATTERN Test17
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RULE r = s;t
RULE I[D] = I[A]\/I[B]
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script shows that a type conflict (between A and B) can be resolved
            by defining a union type D.
   Result: PASS
-}