Tests/ShouldFail/try2.adl
CONTEXT Test

PATTERN Test2
RELATION r[X*Y]
RELATION s[X*A]
RELATION t[B*Y]
RULE r = s;t
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is a simply incorrect with = and ;
   Result: FAIL
   Reason: type error on ;
   Error message:

   The pattern named "Test2" contains errors:
   line 7:10, file "try2.adl":
       Relation  s  is declared as s[X*A] on line 5:1, file "try2.adl",
       but its target concept, A, is not compatible with B.

   line 7:12, file "try2.adl":
       Relation  t  is declared as t[B*Y] on line 6:1, file "try2.adl",
       but its source concept, B, is not compatible with A.
-}